Bug 1198980 - Make JS::ubi::*::identifier be uint64_t instead of uintptr_t. r=sfink